Additional misc. dark mode contrast issues

--- a/src/wp-a11y-day/css/dark-mode.css
+++ b/src/wp-a11y-day/css/dark-mode.css
@@ -38,6 +38,7 @@ body {
 	--input-color: var(--bg);
 	--entry-title-color: var(--accent7);
 	--input-border-color: var(--bg);
+	--share-counts-wrap-color: var(--fg);
 }
 
 #page #gform_wrapper_1 .gfield_required,
